did order in code and correct user Azaliya

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_height="50dp"
         android:ems="10"
         android:hint="enter your password"
-        android:inputType="text"
+        android:inputType="numberSigned|text|textCapSentences|numberDecimal|textEmailAddress|numberPassword"
         android:textSize="24sp"
         android:textStyle="bold"
         android:visibility="invisible"
