add rigt string in code

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_width="238dp"
         android:layout_height="49dp"
         android:ems="10"
-        android:hint="enter your name"
+        android:hint="@string/enter_your_name"
         android:inputType="text"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -31,7 +31,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:ems="10"
-        android:hint="enter your password"
+        android:hint="@string/enter_your_password"
         android:inputType="numberSigned|text|textCapSentences|numberDecimal|textEmailAddress|numberPassword"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -47,7 +47,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:background="#03A9F4"
-        android:text="TextView"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -63,7 +62,7 @@
         android:layout_marginTop="36dp"
         android:background="#12588F"
         android:backgroundTint="#FFEB3B"
-        android:text="Check"
+        android:text="@string/check"
         app:layout_constraintEnd_toEndOf="@+id/tvResult"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tvResult"
