--- a/app/src/main/res/layout/activity_second1.xml
+++ b/app/src/main/res/layout/activity_second1.xml
@@ -13,9 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:background="#03A9F4"
-        android:text="TextView"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/tv_second_activity"
@@ -25,15 +24,15 @@
 
     <TextView
         android:id="@+id/tv_second_activity"
-        android:layout_width="215dp"
-        android:layout_height="30dp"
+        android:layout_width="232dp"
+        android:layout_height="37dp"
         android:background="#03A9F4"
         android:gravity="center"
-        android:text="Hello"
         android:textSize="24dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.226" />
@@ -43,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Проверить зарплату"
+        android:text="@string/check_salary"
         app:layout_constraintEnd_toEndOf="@+id/tvResult1"
         app:layout_constraintStart_toStartOf="@+id/tvResult1"
         app:layout_constraintTop_toBottomOf="@+id/tvResult1" />
@@ -53,7 +52,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Проверить отпуск"
+        android:text="@string/check_the_weekend"
         app:layout_constraintEnd_toEndOf="@+id/btSalary"
         app:layout_constraintStart_toStartOf="@+id/btSalary"
         app:layout_constraintTop_toBottomOf="@+id/btSalary" />
