Im added User name list,and new background image in all Activity

--- a/app/src/main/res/layout/activity_second1.xml
+++ b/app/src/main/res/layout/activity_second1.xml
@@ -26,8 +26,9 @@
         android:id="@+id/tv_second_activity"
         android:layout_width="232dp"
         android:layout_height="37dp"
-        android:background="#03A9F4"
+        android:background="#0003A9F4"
         android:gravity="center"
+        android:textColor="#FAFAFA"
         android:textSize="24dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
