--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
     android:id="@+id/bkImage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#673AB7"
-    android:backgroundTint="#FF5722"
+    android:background="#00000000"
+    android:backgroundTint="#00000000"
     android:backgroundTintMode="add"
     tools:context="com.example.course_attestation.MainActivity">
 
@@ -15,8 +15,11 @@
         android:layout_width="238dp"
         android:layout_height="49dp"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/enter_your_name"
         android:inputType="text"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,7 +35,9 @@
         android:layout_height="50dp"
         android:ems="10"
         android:hint="@string/enter_your_password"
-        android:inputType="numberSigned|text|textCapSentences|numberDecimal|textEmailAddress|numberPassword"
+        android:inputType="text"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
         android:visibility="invisible"
@@ -46,8 +51,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:background="#03A9F4"
+        android:background="#00000000"
+        android:shadowColor="#2B2929"
         android:textAlignment="center"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         android:visibility="invisible"
